# order-classifier

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  run_server.py
ops/: .env.example  Dockerfile  README.md  docker-compose.yml
src/: __init__.py
src/api/: main.py  models.py
src/core/: cache.py  config.py
src/models/: intent_classifier.py
src/utils/: test_loader.py
tests/: simple_test.py  test_accuracy.py  test_api.py  test_cases.json  test_integration.py  test_intent_classifier.py
