[project]
name = "order-classifier"
version = "1.0.0"
description = "Rule-based NLP intent classifier for trading orders using proven pattern matching techniques"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "pydantic==2.10.2",
    "pydantic-settings==2.7.0",
    "numpy==2.1.3",
    "scikit-learn==1.6.0",
    "python-multipart==0.0.18",
    "httpx==0.28.1",
    "cachetools==5.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.25.0",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.8.2",
    "ipython==8.31.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --cov=src --cov-report=term-missing"
